<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentChangePassoword">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/svg_setting_icon" />
        </LinearLayout>

        <EditText
            android:id="@+id/cpi_edt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_bg_grey_dark_200"
            android:hint="@string/txt_password_current"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColorHint="@color/black_primary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cpi_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_bg_grey_dark_200"
            android:hint="@string/txt_password_new"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColorHint="@color/black_primary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cpi_edt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_bg_grey_dark_200"
            android:hint="@string/txt_password_confirm"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:textColorHint="@color/black_primary"
            android:textStyle="bold" />


        <Button
            android:id="@+id/cpi_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/green_primary"
            android:text="@string/txt_change"
            android:textColor="@color/grey_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cpi_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/black_primary"
            android:text="@string/txt_cancel"
            android:textColor="@color/grey_light"
            android:textStyle="bold" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/res_sum_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>


</RelativeLayout>