<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSignIn">

    <!-- Your existing LinearLayout with user interface components -->
    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".FragmentSignIn">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/svg_user_icon" />
            </LinearLayout>

            <!-- Email Input -->
            <EditText
                android:id="@+id/fsu_edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_bg_grey_dark_200"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textColorHint="@color/black_primary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fsu_edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_bg_grey_dark_200"
                android:hint="@string/txt_full_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textColorHint="@color/black_primary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fsu_edt_nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_bg_grey_dark_200"
                android:hint="@string/txt_nic"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textColorHint="@color/black_primary"
                android:textStyle="bold" />

            <!-- Password Input -->
            <EditText
                android:id="@+id/fsu_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_bg_grey_dark_200"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textColorHint="@color/black_primary"
                android:textStyle="bold" />

            <!-- Login Button -->
            <Button
                android:id="@+id/fsu_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/green_primary"
                android:text="@string/txt_register"
                android:textColor="@color/grey_light"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/fsu_txt_acc_rp_loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/txt_already_acc_1"
                        android:textColor="@color/black_primary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/fsu_already_acc_click"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/txt_already_acc_2"
                        android:textColor="@color/blue_primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/res_sum_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</RelativeLayout>

