<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar_main_activity"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingTop="36dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_home_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/home_greeting"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textFontWeight="900"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingBottom="8dp"
                android:text="@string/home_greeting_sub"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_home_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/rounded_bg_white"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingTop="0dp"
                android:paddingRight="12dp"
                android:paddingBottom="0dp"
                android:text="@string/home_button"
                android:textAlignment="center"
                android:textColor="@color/green_primary"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/home_txt_menu"
            android:textColor="@color/black_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/home_list_place_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_bg_grey_dark_200"
            android:gravity="center"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_primary"
                android:textStyle="italic|bold"
                android:text="@string/home_txt_no_upcoming">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/home_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:gravity="center">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>