<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmnetListReservation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btn_reservation_list_past"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_bg_green_dark"
            android:textColor="@color/grey_light"
            android:text="@string/txt_upcoming" />
        <Button
            android:id="@+id/btn_reservation_list_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_bg_grey_dark"
            android:textColor="@color/grey_light"
            android:text="@string/txt_add" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/reservation_list_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>
    <LinearLayout
        android:id="@+id/reservation_list_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_bg_grey_dark_200"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:id="@+id/reservation_list_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_primary"
            android:textStyle="italic|bold"
            android:text="@string/home_txt_no_upcoming">

        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:paddingHorizontal="16dp"
        android:id="@+id/rv_reservation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>